make sure the foot elements break into new lines if there's no space

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -87,8 +87,9 @@ a {
 
 .foot ul {
     display: flex;
+    flex-wrap: wrap;
     gap: 10px;
-    width: max-content;
+    max-width: max-content;
     margin-right: auto;
     margin-left: auto;
     padding: 0;
